2008-01-03 Gary Burton <gary.burton@zen.co.uk>
	* src/GrampsWidgets.py: allow MonitoredEntry widgets to be updated with
	empty strings. I fixed this issue in trunk 2 months ago and no ill effects
	have been reported. issue #1314

2008-01-03 Jerome Rapinat  <romjerome@yahoo.fr>
        * src/GrampsDb/_ReadGrdb.py
        * src/GrampsDb/_ReadXML.py: removed "Family Tree" on translation string, used "database"

2008-01-02 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ViewManager.py: remove unneeded show, remove tabs

2008-01-02 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Filters/SideBar/_PlaceSidebarFilter.py: correct string, bug #1275

2008-01-02 Jerome Rapinat  <romjerome@yahoo.fr>
        * configure.in: update of bg.po

2007-12-23 Benny Malengier <benny.malengier@gramps-project.org>
	* src/glade/gramps.glade: accel (Role and Date) in Event Ref, bug #1449

2007-12-17 Benny Malengier <benny.malengier@gramps-project.org>
	* src/RelLib/_Person.py: sources in attributes of eventref are not seen
		 in ref tables
	* src/RelLib/_EventRef.py: can contain sources, add methods for that
	* src/plugins/Check.py: low level check of repo table, add check to 
		clean up referenced but not existing repos

2007-12-15 Gary Burton <gary.burton@zen.co.uk>
	* src/Editors/_EditFamily.py: emit family-update signal #1416

2007-12-14 Benny Malengier <benny.malengier@gramps-project.org>
	* src/RelLib/_Repository.py: Repo has address which can have source, so
		backref of source to repo must be allowed and added!
	* src/DisplayTabs/_BackRefModel.py: Repo can be backref, add
	* src/DisplayTabs/_BackRefList.py: Repo can be backref, add

2007-12-11 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/IndivComplete.py: bug on buglist, wrong parameter

2007-12-10 Benny Malengier <benny.malengier@gramps-project.org>
	* src/RelLib/_Event.py: add attr to list of sec objects, bug #1318

2007-12-09  Alex Roitman  <shura@gramps-project.org>